# gaffer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
agents/: README.md  arena.mjs  clv-tracker.mjs  deploy-when-funded.sh  detector.mjs  ear.mjs  explainer.mjs  keeper-service.mjs  live-watch.mjs  market-maker.mjs  test.mjs  worker.mjs
deploy/: README.md  cloud-init.sh
docs/: ARCHITECTURE.md  SUBMISSION.md
idl/: latch.json
latch/: Anchor.toml  KERNEL.md
latch/programs/latch/: Cargo.toml
latch/programs/latch/src/: lib.rs
latch/programs/latch/tests/: rake.rs  settle_no.rs
latch/programs/latch/tests/fixtures/: proof-yes.json  proof.json
latch/scripts/: settle-no-test.sh  svm-tests.sh
src/: capture.ts  keeper-demo.ts  keeper-live.ts  keeper.ts  kernel-e2e.ts  kernel-tests.ts  kernel.ts  parlay-check.ts  parlay-e2e.ts  phase0.ts  txline.ts
web/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  scripts_judge-verify-ear.mjs  scripts_judge-verify-fraud.mjs  scripts_judge-verify-settlement.mjs  scripts_judge-verify-usage.mjs  vercel.json
web/public/: proof-deck.html  sw.js
web/scripts/: demo-video.mjs  e2e-corners.mjs  find-window-proofs.mjs  loadtest.mjs  measure-settle-latency.mjs  migrate.mjs  seed-side.mjs  test-admin.mjs  test-cache.mjs  test-draft.mjs  test-economy.mjs  test-grammar.mjs  test-live.mjs  test-payout.mjs  test-push.mjs  test-settle-no.mjs  test-settle-outcome.mjs  test-shells.mjs  test-squad.mjs  test-txline-auth.mjs  verify-stat-keys.mjs  window-demo.mjs
(+109 files in other folders)
