[package]
name = "latch"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "latch"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }


# The SVM harness pulls solana-secp256r1-program -> openssl, which needs an MSVC-native perl on Windows.
# The unit tests (`cargo test -p latch --lib`) never touch it; the integration test runs on unix, and on
# Windows through Docker. See scripts/settle-no-test.sh.
[target.'cfg(unix)'.dev-dependencies]
mollusk-svm = "0.4"
solana-sdk = "2.1"
serde_json = "1"
